--- a/.gitignore
+++ b/.gitignore
@@ -70,3 +70,14 @@ tmp/
 temp/
 *.tmp
 *.temp
+
+# Python scripts and outputs (contain sensitive data)
+scripts/
+*.xlsx
+*.csv
+
+# Python virtual environments
+venv/
+.venv/
+__pycache__/
+*.pyc
