Last Changes Calls Module

--- a/supabase/config.toml
+++ b/supabase/config.toml
@@ -13,6 +13,9 @@ verify_jwt = false
 [functions.ai-assistant]
 verify_jwt = false
 
+[functions.send-call-completed-notification]
+verify_jwt = false
+
 [db]
 port = 54322
 shadow_port = 54320
